tests/baselines/reference/decoratorOnClassMethod10.errors.txt
decoratorOnClassMethod10.ts(4,6): error TS1241: Unable to resolve signature of method decorator when called as an expression.
  Argument of type 'C' is not assignable to parameter of type 'Function'.
    Type 'C' is missing the following properties from type 'Function': apply, call, bind, prototype, and 3 more.


==== decoratorOnClassMethod10.ts (1 errors) ====
    declare function dec(target: Function, paramIndex: number): void;
    
    class C {
        @dec method() {}
         ~~~
!!! error TS1241: Unable to resolve signature of method decorator when called as an expression.
!!! error TS1241:   Argument of type 'C' is not assignable to parameter of type 'Function'.
!!! error TS1241:     Type 'C' is missing the following properties from type 'Function': apply, call, bind, prototype, and 3 more.
    }